Pre-final commit

--- a/data/bibliography.bib
+++ b/data/bibliography.bib
@@ -4,3 +4,14 @@
   year={1997},
   publisher={Петербург}
 }
+
+@article{vitiello:2015,
+  title={Quantum cascade lasers: 20 years of challenges},
+  author={Vitiello, Miriam Serena and Scalari, Giacomo and Williams, Benjamin and De Natale, Paolo},
+  journal={Optics express},
+  volume={23},
+  number={4},
+  pages={5167--5182},
+  year={2015},
+  publisher={Optical Society of America}
+}
